--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,54 @@
-name: CI
+name: Android Rust Build
 
 on:
+  push:
+    branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: 'true'
-    - name: set up JDK 17
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
-    - name: Assemble Release Build
-      run: ./gradlew assembleRelease
+        cache: 'gradle'
+
+    - name: Set up Rust
+      uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: arm64-v8a, armeabi-v7a, x86_64, i686-linux-android
+        components: rustfmt, clippy
+
+    - name: Install cargo-ndk
+      run: cargo install cargo-ndk
+
+    - name: Setup Android NDK
+      uses: nndixon/setup-android-ndk@v1
+      with:
+        ndk-version: r25c # Sesuaikan dengan kebutuhan (README meminta r23+)
+        add-to-path: true
+
+    - name: Rust Cache
+      uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: "rustvncserver -> target" # Sesuaikan path folder Rust jika berbeda
+
+    - name: Build Rust Libraries
+      run: ./gradlew buildRust
+
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug
+
+    - name: Upload APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: droidVNC-NG-Rust-Debug
+        path: app/build/outputs/apk/debug/*.apk
